tests/base/invalid/List_CompileFail_4.whiley
import whiley.lang.*:*

void ::main(System sys,[string] args):
     x = 1
     y = x[0]

